force-app/main/default/objects/AI_Action_Log__c/AI_Action_Log__c.object-meta.xml
<CustomObject>
    <label>AI Action Log</label>
    <nameField>
        <label>AI ACTION  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>