force-app/main/default/objects/AI_Action_Log__c/fields/Generated_DML__c.field-meta.xml
<CustomField>
    <fullName>Generated_DML__c</fullName>
    <label>Generated DML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>