force-app/main/default/objects/AI_Action_Log__c/fields/Original_Query__c.field-meta.xml
<CustomField>
    <fullName>Original_Query__c</fullName>
    <label>Original Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>