force-app/main/default/objects/AI_Action_Log__c/fields/Result_Count__c.field-meta.xml
<CustomField>
    <fullName>Result_Count__c</fullName>
    <label>Result Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>