force-app/main/default/objects/AI_Action_Log__c/fields/Target_Records__c.field-meta.xml
<CustomField>
    <fullName>Target_Records__c</fullName>
    <label>Target Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>